force-app/main/default/objects/Trigger_Handler_Bypass__mdt/Trigger_Handler_Bypass__mdt.object-meta.xml
<CustomObject>
    <description>Captures details about when and which users for whom a trigger handler should not be executed.</description>
    <label>Trigger Handler Bypass</label>
    <pluralLabel>Trigger Handler Bypasses</pluralLabel>
</CustomObject>