force-app/main/default/objects/Trigger_Handler_Bypass__mdt/fields/Bypass_End__c.field-meta.xml
<CustomField>
    <fullName>Bypass_End__c</fullName>
    <description>The date/time the trigger handler should stop being bypassed.  If the user should always bypass the trigger hander execution, leave this as blank.</description>
    <inlineHelpText>The date/time the trigger handler should stop being bypassed.  If the user should always bypass the trigger hander execution, leave this as blank.</inlineHelpText>
    <label>Bypass End</label>
    <type>DateTime</type>
</CustomField>