force-app/main/default/objects/Trigger_Handler_Bypass__mdt/fields/Bypass_Start__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Start__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>The date/time the trigger handler should be bypassed.</description>
    <inlineHelpText>The date/time the trigger handler should be bypassed.</inlineHelpText>
    <label>Bypass Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>