force-app/main/default/objects/Trigger_Handler_Bypass__mdt/fields/Trigger_Handler__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Handler__c</fullName>
    <description>The trigger handler that should be bypassed</description>
    <inlineHelpText>The trigger handler that should be bypassed</inlineHelpText>
    <label>Trigger Handler</label>
    <referenceTo>Trigger_Handler__mdt</referenceTo>
    <relationshipName>Trigger_Handler_Bypasses</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>