force-app/main/default/objects/Trigger_Handler_Bypass__mdt/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <description>The username of the user where the trigger handler should be bypassed.</description>
    <inlineHelpText>The username of the user where the trigger handler should be bypassed.</inlineHelpText>
    <label>User Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>